--- a/qrcodeProj2.html
+++ b/qrcodeProj2.html
@@ -36,6 +36,7 @@
 
 </head>
 <body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -58,53 +59,7 @@
 	</nav>
 
   <div class="container">
-
-
-
-
-<<!-- div class="swiper-slide">
-              <div class="card mb-3" style="max-width: 940px">
-                <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg" class="card-img" alt="..." />
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">PUPPIES</h5>
-                      <p>MY CUTTIIIEEEEEE PIEEEEE</p>
-
-                      <p class="card-text">
-                        <small class="text-muted"
-                          >Last updated 3 mins ago</small
-                        >
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
-
-
-
-
-
- <!-- <div class="card" style="width: 18rem;">
-  <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
- -->
-
-
-
-
-
-
-  
-
-    <div class="flex-row" >
+    <div class="row" >
       <div class="col-lg-4 col-sm-6 ">
         <div class="thumbnail">
           <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
@@ -114,57 +69,30 @@
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
           <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p>SOUP</p>
+          <p id="footer">SOUP</p>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 ">
         <div class="thumbnail">
           <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">STARTERS</p>
+          <p id="footer">MAINCOURSE</p>
         </div>
       </div>
+      </div>
+      <div class="row" >
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
           <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p>SOUP</p>
+          <p id="footer">DESSERTS</p>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6 ">
+    <div class="col-lg-4 col-sm-6 ">
         <div class="thumbnail">
           <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">STARTERS</p>
+          <p id="footer">BEVERAGES</p>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p>SOUP</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 ">
-        <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">STARTERS</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p>SOUP</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 ">
-        <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">STARTERS</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p>SOUP</p>
-        </div>
-      </div>
+    </div>
       
       
 
@@ -205,7 +133,7 @@
           <img src="https://images.unsplash.com/photo-1439694458393-78ecf14da7f9?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
       </div>
     </div> -->
-  </div>
+  
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
