--- a/qrcodeProj2.html
+++ b/qrcodeProj2.html
@@ -60,36 +60,111 @@
 
   <div class="container">
     <div class="row" >
-      <div class="col-lg-4 col-sm-6 ">
+      <div class="col-lg-4 col-sm-6" >
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">STARTERS</p>
+          <img src="https://images.pexels.com/photos/2213257/pexels-photo-2213257.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          <p>
+            <button class=" btn btn-primary text-bold " type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              STARTERS
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Fish Fingers <input type="number"/></li>
+                <li class="list-group-item">French Fries</li>
+                <li class="list-group-item">Chicken Lollipop</li>
+                <li class="list-group-item">Spring Roll</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p id="footer">SOUP</p>
+          <img src="https://images.pexels.com/photos/724667/pexels-photo-724667.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          <p>
+            <button class=" btn btn-primary text-bold " type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
+              SOUPS
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample1">
+            <div class="card card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Hot and Sour </li>
+                <li class="list-group-item">Cream of Mushroom</li>
+                <li class="list-group-item">Sweet Corn </li>
+                <li class="list-group-item">Creamy Cauliflower</li>
+                <li class="list-group-item">Lemon Chicken</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 ">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">MAINCOURSE</p>
+          <img src="https://images.pexels.com/photos/1437267/pexels-photo-1437267.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          <p>
+            <button class=" btn btn-primary text-bold " type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
+              MAIN COURSE
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample2">
+            <div class="card card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Pesto Pasta</li>
+                <li class="list-group-item">White Sauce Pasta</li>
+                <li class="list-group-item">Chicken Sub </li>
+                <li class="list-group-item">Chicken Hyderabadi Biriyani</li>
+                <li class="list-group-item">Chicken Burger</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       </div>
       <div class="row" >
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images7.alphacoders.com/343/thumb-1920-343425.jpg">
-          <p id="footer">DESSERTS</p>
+          <img src="https://images.pexels.com/photos/2144112/pexels-photo-2144112.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          <p>
+            <button class=" btn btn-primary text-bold " type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+              DESSERTS
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample3">
+            <div class="card card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Ice Cream</li>
+                <li class="list-group-item">Cup Cakes</li>
+                <li class="list-group-item">Rainbow Cakes</li>
+                <li class="list-group-item">Chocolate Mousse</li>
+                <li class="list-group-item">Brownies</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     <div class="col-lg-4 col-sm-6 ">
         <div class="thumbnail">
-          <img src="https://cdn.pixabay.com/photo/2017/05/01/05/18/pastry-2274750_1280.jpg">
-          <p id="footer">BEVERAGES</p>
+          <img src="https://images.unsplash.com/photo-1521012012373-6a85bade18da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
+          <p>
+            <button class=" btn btn-primary text-bold " type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
+              BEVERAGES
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample4">
+            <div class="card card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Lemon Tea</li>
+                <li class="list-group-item">Milk Tea</li>
+                <li class="list-group-item">Bubble Tea</li>
+                <li class="list-group-item">Black Tea</li>
+                <li class="list-group-item">Coffee</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
