--- a/qrcodeProj2.html
+++ b/qrcodeProj2.html
@@ -49,42 +49,59 @@
               STARTERS
             </button>
           </p>
-          <form action="phpsample.php" method="post" class="mb-3">
+          <form action="" method="post" class="mb-3">
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
-              <ul class="list-group">
-                <li class="list-group-item">Fish Fingers <div class="qty mt-5">
+              <form>
+                <input type="checkbox" id="bk" name="Starters" onClick="checkbox();" value="Fish Finger">Fish Finger<div class="form-group">
+                  <select class="form-control" id="exampleFormControlSelect1">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                  </select>
+                </div><br>
+                <input type="checkbox" id="cr" name="Starters" onClick="checkbox();" value="French Fries">French Fries<br></br> 
+                <input type="checkbox" id="bk" name="Starters" onClick="checkbox();" value="Chicken Lollipop">Chicken Lollipop<br></br>
+                <input type="checkbox" id="cr" name="Starters" onClick="checkbox();" value="Nuggets">Nuggets<br></br> 
+                <input type="text" id="show" name="Starters"><br>
+                <input type="submit" value="Add">
+            </form> 
+              <!-- <ul class="list-group">
+                <li type="checkbox" input class="list-group-item">Fish Fingers
+                   <div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div>
               </li>
                 <li class="list-group-item">French Fries<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Chicken Lollipop<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Spring Roll<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Vestibulum at eros<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </form>
@@ -103,31 +120,31 @@
               <ul class="list-group">
                 <li class="list-group-item">Hot and Sour<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div> </li>
                 <li class="list-group-item">Cream of Mushroom<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Sweet Corn <div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Creamy Cauliflower<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Lemon Chicken<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
@@ -149,31 +166,31 @@
               <ul class="list-group">
                 <li class="list-group-item">Pesto Pasta<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">White Sauce Pasta<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Chicken Sub <div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Chicken Hyderabadi Biriyani<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Chicken Burger<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
@@ -197,31 +214,31 @@
               <ul class="list-group">
                 <li class="list-group-item">Ice Cream<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Cup Cakes<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Rainbow Cakes<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Chocolate Mousse<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
                 <li class="list-group-item">Brownies<div class="qty mt-5">
                   <span class="minus bg-dark">-</span>
-                  <input type="number" class="count" name="qty" value="1">
+                  <input type="number" class="count" name="qty" value="0">
                   <span class="plus bg-dark">+</span>
                   <button type="button" class="btn btn-success">Add</button>
               </div></li>
