--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script><link rel="stylesheet" href="./style.css">
-
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <!-- Nav -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<nav class="navbar navbar-inverse bg-inverse fixed-top bg-faded">
+<nav class="navbar  navbar-inverse bg-inverse fixed-top bg-faded">
     <div class="row">
-        <div class="col">
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart (<span class="total-count"></span>)</button><button class="clear-cart btn btn-danger">Clear Cart</button></div>
+       <button type="button" class="btn btn-primary"  data-toggle="modal" data-target="#cart">Cart (<span class="total-count"></span>)</button>
+       <button class="clear-cart btn btn-danger ml-2" >Clear Cart</button>
     </div>
 </nav>
 
@@ -224,7 +224,8 @@
   </div>
 </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  <script  src="script.js"></script>
 
 </body>
 </html>
