--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  				<h1>Eat Street</h1>
  				<h3>The Only Human-Food Dating website</h3>
          <hr>
-         <a href="index.html">
+         <a href="order.html">
          <button class="btn btn-default btn-lg"><i class="fas fa-french-fries"></i>
            Get Started!</button>
           </a>
