--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  		<div class="col-lg-12">
  			<div class="content">
  				<h1>Eat Street</h1>
- 				<h3>The Only Human-Food Dating website</h3>
+ 				<h3>“One cannot think well, love well, sleep well, if one has not dined well.”</h3>
          <hr>
          <a href="order.html">
          <button class="btn btn-default btn-lg"><i class="fas fa-french-fries"></i>
